Color Matcher Enhancements
508 for warmer/colder, decimal values, color names, and contrast for
foreground text.

--- a/index.html
+++ b/index.html
@@ -328,11 +328,21 @@
 
             <h1>External Links</h1>
 
+            <h2><a href="http://binarypuzzle.com/" target="_blank">Binary Puzzles</a></h2>
+
             <h2><a href="https://www.filamentgames.com/" target="_blank">Filament Games</a></h2>
+
+            <h2><a href="https://github.com/stared/science-based-games-list" target="_blank">GitHub: Science-based games</a></h2>
 
             <h2><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></h2>
 
             <h2><a href="https://www.kcl.ac.uk/sspp/departments/warstudies/people/professors/sabin/consim.aspx" target="_blank">Kings College Conflict Simulation</a></h2>
+
+            <h2><a href="https://mathoverflow.net/questions/281447/mathematical-games-interesting-to-both-you-and-a-5-year-old-child" target="_blank">MathoverFlow: Games Interesting to Both You and a 5-Year-Old</a></h2>
+
+            <h2><a href="http://www.mensaforkids.org/play/games/">Mensa Kids Games</a></h2>
+
+            <h2><a href="http://www.molleindustria.org/">Socially Conscious Games</a></h2>
 
         </div>
 
