--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
 
             <p><a href="math/primefactortree/"><img src="images/primefactortree.png" alt="Image of Prime Factor Tree" title="" /></a></p>
 
+            <h2><a href="math/fractionvisualizer/">Fraction Visualizer</a></h2>
+
+            <p>Built on the idea of fraction blocks as a manipulative. Represents fractions visually, as percentage, decimal, and fraction.</p>
+
+            <p><a href="math/fractionvisualizer/"><img src="images/fractionvisualizer.png" alt="Image of Fraction Visualizer" title="" /></a></p>
+
             <h2><a href="math/vectorracer/">Vector Racer</a></h2>
 
             <p>The graph-paper game <a href="https://en.wikipedia.org/wiki/Racetrack_(game)">Racetrack</a>. Good for teaching the concepts of velocity and acceleration, this game can only be mastered with mathematics. Built with code snippets from <a href="http://jsfiddle.net/m1erickson/sAFku/">m1erickson</a>, <a href="https://stackoverflow.com/questions/4672279/bresenham-algorithm-in-javascript">Boris Hamanov/Bresenham</a>, and <a href="https://codepen.io/Cthulahoop/pen/sxqpL">Cthulahoop</a>.</p>
