Parts of Speech game.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
 
             <p><a href="reading/creativecommonsbookreader/"><img src="images/creativecommonsbookreader.png" alt="Image of Creative Commons Book Reader" title="" /></a></p>        
 
+            <h2><a href="reading/partsofspeech/">Parts of Speech Game</a></h2>
+
+            <p>Similar to the game Mad Libs, a simple application that prompts for various kinds of words and then inserts them into classic public domain texts.</p>
+
+            <p><a href="reading/partsofspeech/"><img src="images/partsofspeech.png" alt="Image of Parts of Speech" title="" /></a></p>
+
             <h2><a href="reading/shakespeareaninsultgenerator/">Shakespearean Insult Generator</a></h2>
 
             <p>Based on the classic meme, generates a Shakespearean insult. Included here as a demonstration of a very easy program anyone can write if they "View Source" and read the code.</p>
