Daisyworld Initial check in.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="https://github.com/ideonexus/Explorable-Explanations/zipball/master" class="btn">Download .zip</a>
         <a href="https://github.com/ideonexus/Explorable-Explanations/tarball/master" class="btn">Download .tar.gz</a>
 
-        <p>Here is an evolving list of one-shot standalone educational toys.</p>
+        <p>Here is an evolving list of one-shot standalone virtual manipulatives.</p>
     </section>
 
     <section class="main-content">
@@ -133,6 +133,14 @@
             <p>Adapted from <a href="https://gist.github.com/matthewtole/3550487">matthewtole ShakespeareaInsult.js</a> and <a href="http://web.mit.edu/afs/athena.mit.edu/user/d/r/dryfoo/www/Funny-pages/shakespeare-insult-kit.html">Shakespeare Insult Kit</a>.</p>
             
             <p><a href="reading/shakespeareaninsultgenerator/"><img src="images/shakespeareaninsultgenerator.png" alt="Image of Shakespearean Insult Generator" title="" /></a></p>
+
+            <h2><a href="science/daisyworld/">Daisyworld</a></h2>
+
+            <p>A javascript <a href="https://en.wikipedia.org/wiki/Daisyworld">Daisyworld Simulation</a> that starts with Earth values and allows you to adjust them, seeing how the daisy populations shift to change the albedo (reflectiveness) of the planet to maintain a habitable temperature.</p>
+
+            <p>Credit to <a href="http://www.gingerbooth.com/flash/daisyball/daisyworldmath.html">Ginger Booth's mathematical explanations</a>, <a href="https://astronomy.stackexchange.com/questions/10113/how-to-calculate-the-expected-surface-temperature-of-a-planet">Irigi</a> temperature explanations, <a href="http://jsfiddle.net/AyexeM/zMZ9y/">AyexeM</a> random map generation, and <a href="https://codepen.io/HowToDevCode/pen/ORzzJm">HowToDevCode</a> map on a rotating sphere projection.</p>
+
+            <p><a href="science/daisyworld/"><img src="images/daisyworld.png" alt="Image of Daisyworld" title="" /></a></p>
 
             <h2><a href="reading/typingquest/">Typing Quest</a></h2>
 
