Kaleidostrobe initial check-in.

--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
 
             <p><a href="science/daisyworld/"><img src="images/daisyworld.png" alt="Image of Daisyworld" title="" /></a></p>
 
+            <h2><a href="science/kaleidostrobe/">Kaleidostrobe</a></h2>
+
+            <p>Wrote this after seeing how strobelights affect the appearance of fans rotating. Add shapes to the canvase and adjust their rotation rates to create different kaleidoscopic effects.</p>
+
+            <p><a href="science/kaleidostrobe/"><img src="images/kaleidostrobe.png" alt="Image of Kaleidostrobe" title="" /></a></p>
+
             <h2><a href="reading/typingquest/">Typing Quest</a></h2>
 
             <p>A really fun and mind-bending typing game. I have cleaned up the off-color language from the original and refactored the code a bit to support different skill levels with options easy enough a toddler can hunt-and-peck to play.</p>
