Magic Squre Tic Tac Toe

--- a/index.html
+++ b/index.html
@@ -290,6 +290,12 @@
 
             <p><a href="math/vectorracer/"><img src="images/vectorracer.png" alt="Image of Vector Racer" title="" /></a></p>
 
+            <h2><a href="math/magicsquaretictactoe/">Magic Squre Tic Tac Toe</a></h2>
+
+            <p>A isomorph of tic tac toe where the first player to get three numbers adding up to 15 wins. Try turning off the grid for a harder challenge. Comes with an unbeatable AI and the option to change the target number.</p>
+
+            <p><a href="math/magicsquaretictactoe/"><img src="images/magicsquaretictactoe.png" alt="Image of Magic Squre Tic Tac Toe" title="" /></a></p>
+
             <h2><a href="math/puzzlearithmetic/">Puzzle-Piece Arithmetic</a></h2>
 
             <p>My youngest loves puzzles, so this interface for adding numbers really engages him.</p>
